# typelist

./: .ignore  CMakeLists.txt  Meta_traits.hpp  compare.hpp  erase.hpp  find.hpp  get_n.hpp  insert.hpp  main.cpp  merge.hpp  predicate.hpp  reverse.hpp  rotate.hpp  sort.hpp  swap.hpp  unique.hpp
include/: type_list.hpp
test/: CMakeLists.txt  test_erase.cpp  test_find.cpp  test_get_n.cpp  test_insert.cpp  test_reverse.cpp  test_rotate.hpp  test_sort.cpp  test_swap.cpp  test_unique.cpp
